--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "start": "ts-node server/src",
         "start-dev-server": "webpack-dev-server --config frontend/webpack.config.js",
         "build-frontend": "webpack --config frontend/webpack.config.js",
-        "build-server": "tsc --build server/tsconfig.json",
+        "build-server": "tsc --build server/tsconfig.json && copyfiles -u 3 \"server/src/configs/*.json\" \"server/dist/configs\"",
         "build": "npm run graphql-codegen && npm run build-server && npm run build-frontend",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -53,6 +53,7 @@
         "@types/react-dom": "^16.9.8",
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
+        "copyfiles": "^2.3.0",
         "html-webpack-plugin": "^4.3.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
